Fixed background photo
It was not lining up with the bottom of the form when the form section
was shrunk to the point of needing a scroll bar.

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
     background-image: url("turtlebg.jpg");
     background-size: cover;
     height: 100vh;
+    min-height: 703px;
     flex: 1;
 }
 
